@startuml
' ======= layout =========
skinparam backgroundColor #fcf9ea
skinparam titleBorderRoundCorner 15
skinparam titleFontSize 30
skinparam classAttributeIconSize 0
skinparam titleFontName Arial Black
skinparam titleFontColor #f8a978
skinparam roundcorner 20
skinparam stereotypeCBackgroundColor ffc5a1
skinparam class {

ArrowColor ffc5a1
BorderColor White
BackgroundColor badfdb
}


' ======= title =========
center header


<font color=Black size=15><b>Built by WeByte ©</font>
endheader
title <b>US12 - Class Diagram\n

' ======= classes =========

class RecordTestResultsUI

class SamplesStore{
  +getSamplebyBarcode(barcode)
}

class Company {
  -designation
  +getRecordTestResultsStore()
  +getRecordSamplesStore()
  +getRecordRegistTestStore()
}
class RecordTestResultsStore {
   +addTestResult(parameterCode, result, metric)
}


class RegistTestStore{
   +getTestbySample(sample)
}

class RecordTestResultsController{
   +getTestbyBarcode(barcode)
   +addTestResult(parameterCode, result, metric)
}
class RecordTestResultsStore
RecordTestResultsUI ...> RecordTestResultsController
RecordTestResultsController ...> Company
RecordTestResultsController ..> RecordTestResultsStore
RecordTestResultsController ..> SamplesStore
RecordTestResultsController ..> RegistTestStore

Company "1" ----> "1" SamplesStore : "uses"
Company "1" ----> "1" RegistTestStore : "uses"

@enduml